# sidecar

./: README.md
wikidata-api/: Cargo.toml
wikidata-api/src/: charabia_tokenizer.rs  main.rs  storage.rs  string_to_id.rs
wikidata-api/templates/: base.html.tera  index.html.tera  infobox.html.tera  notfound.html.tera
wikidata-rust/: Cargo.toml  README.md  run.sh
wikidata-rust/src/: charabia_tokenizer.rs  default_values.rs  documents.rs  instance_of.rs  main.rs  ranks.rs  string_to_id.rs  symspell_dict.rs  utils.rs  write.rs
