[package]
name = "wikidata-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tantivy = { version = "0.18", features = ["mmap", "brotli-compression"] }
tantivy-jieba = "0.6.0"
reqwest = { version = "0.11.11", features = ["json", "brotli", "gzip", "deflate"] }
wikidata = "0.3"
jemallocator = "0.5.0"
charabia = "0.5.1"
symspell = "0.4.3"
rocket_okapi = { git="https://github.com/GREsau/okapi.git", features = ["swagger", "rapidoc"] }

[default]
template_dir = "templates"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
