[package]
name = "wikidata"
version = "0.0.1"
authors = ["Dalf <alex@al-f.net>"]

[dependencies]
indicatif = "0.16"
bzip2 = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.4"
simd-json = { version = "*" }
simd-json-derive = "*"
tantivy = { version = "0.18", features = ["mmap", "brotli-compression"] }
tantivy-jieba = "0.6.0"
csv = "1.1"
jemallocator = "0.5.0"
charabia = "0.5.1"
rayon = "1.5.3"

[profile.release-lto]
inherits = "release"
lto = true
